Try out a game layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-			<h4>Made by:</h4>
+			<h3>Made By:</h3>
 			<li><a href="https://github.com/lillianrowley">Lillian Rowley</a></li>
 			<li><a href="https://github.com/mattbrowley">Matthew Rowley</a></li>
 		</ul>
