tiny changes and ignore swap files

--- a/css/game.css
+++ b/css/game.css
@@ -8,6 +8,7 @@ nav ul {
     list-style: none;
     font-weight: bold;
     background-color:lightblue;
+    width: 25%;
 }
 nav a {
     text-decoration: none;
