implement back button in game

--- a/_layouts/game_start.html
+++ b/_layouts/game_start.html
@@ -3,14 +3,12 @@
 	<head>
 		<title>{{ page.title }}</title>
 		<!-- link to game stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/game.css">
+		<link rel="stylesheet" type="text/css" href="/css/game_start.css">
 	</head>
 	<body>
 		<nav>
 		<ul>
-			<li><a href="/">Home</a></li>
-            <li><a href="{{page.back}}">Back</a></li>
-			<li><a href="/game">Start Over</a></li>
+			<li><a href="/"> Home </a></li>
 		</ul>
 		</nav>
 		<div class="container">
