Added the silly sledding olympics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/game">Game</a></li>
         		<li><a href="/blog">Blog</a></li>
+				<li><a href="/media">Pictures and Videos</a></li>
     		</ul>
 		</nav>
 		<div class="container">
