Make templates for adventure game, and link to Scratch story

--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -10,7 +10,7 @@
 		<ul>
 			<li><a href="/">Home</a></li>
             <li><a href="{{page.back}}">Back</a></li>
-			<li><a href="/game">Start Over</a></li>
+			<li><a href="/game/start.html">Start Over</a></li>
 		</ul>
 		</nav>
 		<div class="container">
