--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/game">Game</a></li>
+        		<li><a href="/game">Games</a></li>
         		<li><a href="/blog">Blog</a></li>
 				<li><a href="/media">Pictures and Videos</a></li>
     		</ul>
