--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/game">Games</a></li>
+        		<li><a href="/podcast">Podcast</a></li>
         		<li><a href="/blog">Blog</a></li>
 				<li><a href="/media">Pictures and Videos</a></li>
     		</ul>
