Fix some typos in the description and add a photo to the podcast main page

--- a/_layouts/podcast_episode.html
+++ b/_layouts/podcast_episode.html
@@ -45,7 +45,8 @@
 
       <p>
       Music by <a
-              href="https://tchem.bandcamp.com/album/seasons-from-the-world-of-wanderhome" target="_blank">tchem</a>
+              href="https://tchem.bandcamp.com/album/seasons-from-the-world-of-wanderhome"
+              target="_blank">Timothy Michel (tchem)</a>
       with his generous permission
       </p>
 
